objects/ltcomm__Payment_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is the data for eCommerce setup and payment systems.</description>
    <fields>
        <fullName>Enable_ILT_Open_Seat_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable ILT Open Seat Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Summary_Footer__c</fullName>
        <label>Purchase Summary Footer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Summary_Information__c</fullName>
        <label>Purchase Summary Information</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__Apply_Event_Price_To_Classes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Apply ILT Event price to child classes</description>
        <label>Apply Event price to classes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ltcomm__Authorize_Net_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorize.Net Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ltcomm__Authorize_Net_Login_Id__c</fullName>
        <label>Authorize.Net Login Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__Authorize_Net_Transaction_Key__c</fullName>
        <label>Authorize.Net Transaction Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__Authorize_Net_URL_Production__c</fullName>
        <label>Authorize.Net URL Production</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__Authorize_Net_URL_Sandbox__c</fullName>
        <label>Authorize.Net URL Sandbox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__Enable_Prerequisites_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Prerequisites Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ltcomm__PayPal_Cancel_URL__c</fullName>
        <label>PayPal Cancel URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__PayPal_Credentials_Production__c</fullName>
        <label>PayPal Credentials Production</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__PayPal_Credentials_Sandbox__c</fullName>
        <label>PayPal Credentials Sandbox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__PayPal_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>PayPal Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ltcomm__PayPal_Return_URL__c</fullName>
        <label>PayPal Return URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__PayPal_URL_Production__c</fullName>
        <label>PayPal URL Production</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__PayPal_URL_Sandbox__c</fullName>
        <label>PayPal URL Sandbox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__Shopping_Cart_URL__c</fullName>
        <label>Shopping Cart URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__Stripe_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stripe Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ltcomm__Stripe_Secret_Key_Production__c</fullName>
        <label>Stripe Secret Key Production</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__Stripe_Secret_Key_Sandbox__c</fullName>
        <label>Stripe Secret Key Sandbox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__Use_Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <label>eCommerce Settings</label>
</CustomObject>